--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
               <span style="font-weight:bold; color:black">Etudie à </span>:
               <a href="https://www.centrale-marseille.fr/fr/simplonmars" target="_blank">
                 <img class="simplon" src="image/sm.png" /> </a>
-            </p>
+            <p class="txtpresentation">
+              <span style="font-weight:bold; color:black">Cv à télecharger </span>:
+              <a href="Documents/Cv-Chaspoul.odt" target="_blank">
+                <img class="Cv" src="image/Cv.png" /> </a>
+              </p>
           </div>
         </div>
       </div>
@@ -132,13 +136,7 @@
     <p class="fontfoot disfoot"> Copyright 2016 © Chaspoul </p>
   </footer>
 
-  <script>
-    $(document).ready(function() {
-      $('.carousel').carousel({
-        interval: 9000
-      })
-    });
-  </script>
+
 
 
 
