--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
         <div class="fb-profile">
           <img id="Presentation" align="left" class="dev fb-image-lg" src="image/dev.jpg" alt="Profile image example" />
-          <img align="left" class="fb-image-profile thumbnail" src="image/kevin.jpg" alt="Profile image example" />
+          <img align="left" class="fb-image-profile thumbnail" src="image/Florent.png" alt="Profile image example" />
           <div class="fb-profile-text">
             <h1 class="namepresentation">Florent Chaspoul</h1>
             <h4>Développeur junior</h4>
@@ -48,7 +48,7 @@
                 <img class="simplon" src="image/sm.png" /> </a>
             <p class="txtpresentation">
               <span style="font-weight:bold; color:black">Cv à télecharger </span>:
-              <a href="Documents/Cv-Chaspoul.odt" target="_blank">
+              <a href="Documents/Cv-Chaspoul.pdf" target="_blank">
                 <img class="Cv" src="image/Cv.png" /> </a>
               </p>
           </div>
@@ -69,13 +69,13 @@
               <li class="col-sm-3">
                 <div class="mrgdroite fff">
                   <div class="thumbnail">
-                    <a href="" target="_blank">
+                    <a href="http://scotflo13.github.io/Space-invaders/" target="_blank">
                       <img class="sw" src="image/Space-invader.png" alt=""> </a>
                   </div>
                   <div class="caption">
                     <h4>Space-invaders</h4>
                     <p> </p>
-                    <a class="btn btn-mini" href="#">» En savoir plus</a>
+                    <a class="btn btn-mini" href="https://github.com/scotflo13/Space-invaders">» En savoir plus/Code</a>
                   </div>
                 </div>
               </li>
@@ -90,7 +90,7 @@
                   <div class="caption">
                     <h4>Projet-paon</h4>
                     <p> </p>
-                    <a class="btn btn-mini" href="#">» En savoir plus</a>
+                    <a class="btn btn-mini" href="https://github.com/project-paon/paon">» En savoir plus/Code</a>
                   </div>
                 </div>
               </li>
@@ -98,13 +98,13 @@
               <li class="col-sm-3">
                 <div class=" mrgdroite fff">
                   <div class="thumbnail">
-                    <a href="" target="_blank">
+                    <a href="http://retro-pixel.github.io/retro-pixel.github.io/" target="_blank">
                       <img class="sw" src="image/Retro-pixel.png" alt=""> </a>
                   </div>
                   <div class="caption">
                     <h4>Retro-pixel</h4>
                     <p></p>
-                    <a class="btn btn-mini" href="#">»En savoir plus</a>
+                    <a class="btn btn-mini" href="https://github.com/Retro-pixel/retro-pixel.github.io">»En savoir plus/Code</a>
                   </div>
                 </div>
               </li>
